[build-system]
requires = [
    "scikit-build-core==0.8.2",
    "typing-extensions~=4.1",
]

build-backend = "scikit_build_core.build"

[project]
name = "lagrange-open"
maintainers = [{name = "Lagrange Core Team", email = "lagrange-core@adobe.com"}]
description = "A robust geometry processing engine"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "colorama>=0.4.5",
]
dynamic = ["version"]

[project.urls]
repo = "https://github.com/adobe/lagrange"
doc = "https://opensource.adobe.com/lagrange-docs"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]
lint = [
    "ruff==0.4.3",
    "mypy==1.1.1"
]
packaging = [
    "twine>=4.0.0"
]
dev = [
    "lagrange[test]",
    "lagrange[lint]",
    "lagrange[packaging]"
]

[tool.black]
line_length = 100

[tool.ruff]
line-length = 100

[tool.scikit-build]
install.components = ["Lagrange_Python_Runtime"]
wheel.packages = ["modules/python/lagrange"]

[tool.scikit-build.cmake.define]
LAGRANGE_ASSERT_DEBUG_BREAK = false
LAGRANGE_EXAMPLES = false
LAGRANGE_INSTALL = false
LAGRANGE_MODULE_IO = true
LAGRANGE_MODULE_IMAGE = true
LAGRANGE_MODULE_PYTHON = true
LAGRANGE_MODULE_SCENE = true
LAGRANGE_MODULE_SUBDIVISION = true
LAGRANGE_UNIT_TESTS = false
LAGRANGE_WITH_ASSIMP = true
TBB_PREFER_STATIC = false

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"
