[build-system]
build-backend = "scikit_build_core.build"

requires = [
    "scikit-build-core==0.11.6",
    "typing-extensions~=4.1",
]

[project]
name = "lagrange-open"
description = "A robust geometry processing engine"
readme = "README.md"
license = "Apache-2.0"
license-files = [ "LICENSE", "NOTICE.txt" ]

maintainers = [ { name = "Lagrange Core Team", email = "lagrange-core@adobe.com" } ]
requires-python = ">=3.9,<3.14"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dynamic = [ "version" ]
dependencies = [
    "colorama>=0.4.4; platform_system!='Windows'",
    "colorama>=0.4.6; platform_system=='Windows'",
    "numpy>=1.25",
    "scipy>=1.13.0",
]
urls.documentation = "https://opensource.adobe.com/lagrange-docs"
urls.repository = "https://github.com/adobe/lagrange"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]
test = [
    "pytest>=7.0.0",
]
lint = [
    "mypy==1.1.1",
    "ruff==0.4.3",
]

[tool.scikit-build]
ninja.version = ">=1.11.1"
ninja.make-fallback = false
install.components = [ "Lagrange_Python_Runtime" ]
wheel.packages = [ "modules/python/lagrange" ]

build-dir = "build-python"
editable.rebuild = false

# Debug related options
# cmd: uv sync [--verbose] [--reinstall-package lagrange]
# ---------------------
#
# build.verbose = true
# editable.verbose = false
# logging.level = "INFO"
#
# cmake.build-type = "Debug"
# install.strip = false

[tool.scikit-build.cmake.define]
CMAKE_GENERATOR = "Ninja"
CMAKE_GENERATOR_PLATFORM = ""
LAGRANGE_ASSERT_DEBUG_BREAK = false
LAGRANGE_EXAMPLES = false
LAGRANGE_INSTALL = false
LAGRANGE_MODULE_BVH = true
LAGRANGE_MODULE_FILTERING = true
LAGRANGE_MODULE_GEODESIC = true
LAGRANGE_MODULE_IMAGE = true
LAGRANGE_MODULE_IO = true
LAGRANGE_MODULE_POISSON = true
LAGRANGE_MODULE_POLYDDG = true
LAGRANGE_MODULE_PYTHON = true
LAGRANGE_MODULE_SCENE = true
LAGRANGE_MODULE_SOLVER = true
LAGRANGE_MODULE_SUBDIVISION = true
LAGRANGE_MODULE_TEXPROC = true
LAGRANGE_UNIT_TESTS = false
LAGRANGE_WITH_ASSIMP = true
TBB_PREFER_STATIC = false

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[tool.black]
line_length = 100

[tool.ruff]
line-length = 100

[tool.pyproject-fmt]
indent = 4
keep_full_version = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "."

[tool.uv]
python-preference = "only-managed"
